recursion.cons.lessons.recursion.cons.Nlast.scala.error
nlast:2: error: not found: type int
	def fonctionInterne(l:List[int],n:Int){
                                   ^nlast:6: error: value :: is not a member of Unit
			return l.head :: fonctionInterne(l.tail,0);
                                      ^nlast:11: error: type mismatch;
 found   : Unit
 required: List[Int]
	return fonctionInterne(l,l.size-n);
                              ^